rework project settings add core execution